[package]
name = "tonic-route-guide"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.1"
prost = "0.6"
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.1"

[lib]
name = "route"
path = "src/route/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"